Added found/notFound assertions.